Fix header line spacing.

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -27,6 +27,7 @@ body {
 
 .blog-footer {
   text-align: right;
+  font-size: 0.9em;
   background-color: #112233;
   color: #666666; }
   .blog-footer a:link, .blog-footer a:visited {
@@ -92,7 +93,7 @@ hr {
 h1 {
   font-family: "Rosario", sans-serif;
   font-weight: lighter;
-  line-height: 1.313em;
+  line-height: 0.8em;
   font-size: 3em;
   margin: 0.563em 0; }
   h1 a:link, h1 a:visited {
@@ -103,7 +104,7 @@ h1 {
 h2 {
   font-family: "Rosario", sans-serif;
   font-weight: lighter;
-  line-height: 1.313em;
+  line-height: 0.8em;
   font-size: 2.25em;
   margin: 0.625em 0; }
   h2 a:link, h2 a:visited {
@@ -114,7 +115,7 @@ h2 {
 h3 {
   font-family: "Rosario", sans-serif;
   font-weight: lighter;
-  line-height: 1.313em;
+  line-height: 0.8em;
   font-size: 1.5em;
   margin: 1.313em 0; }
   h3 a:link, h3 a:visited {
@@ -125,7 +126,7 @@ h3 {
 h4 {
   font-family: "Rosario", sans-serif;
   font-weight: lighter;
-  line-height: 1.313em;
+  line-height: 0.8em;
   font-size: 1.313em;
   margin: 1.313em 0; }
   h4 a:link, h4 a:visited {
@@ -136,7 +137,7 @@ h4 {
 h5 {
   font-family: "Rosario", sans-serif;
   font-weight: lighter;
-  line-height: 1.313em;
+  line-height: 0.8em;
   font-size: 1.125em;
   margin: 1.313em 0; }
   h5 a:link, h5 a:visited {
@@ -147,7 +148,7 @@ h5 {
 h6 {
   font-family: "Rosario", sans-serif;
   font-weight: lighter;
-  line-height: 1.313em;
+  line-height: 0.8em;
   font-size: 1em;
   margin: 0.75em 0; }
   h6 a:link, h6 a:visited {
